Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>

	Moved syntax file to syntax/ subdirectory.  They
	still don't get installed in a subdirectory :-(

Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>
	* scrn.c, rc.c, joerc.in:

	Added -assume_color global option.  Need to update
	other *rc files.

Mon Apr 12 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am b.c b.h bw.c scrn.c uedit.c utf8.c utf8.h:

	Input of UTF-8 is now working.  For example, you
	can cut and paste in an xterm.

	Placed UTF-8 encoder and decoder in separate file.

Mon Apr 12 2004  Joe Allen <jhallen@world.std.com>
	* bw.c:

	If a double-wide character hits right column, display '>' instead of
	the character.  If a double-wide character is one column to the left
	of the screen, display '<' instead of the character.


Mon Apr 12 2004  Joe Allen <jhallen@world.std.com>
	* almost all of them...:

	Added -notite global option: when set, prevents screen from
	being restored on exit.

	Added -usetabs global option: when set, uses tabs for cursor
	position update (which was the default before).  Now we don't
	use tabs by default.

        Completed change to 'unsigned char *' and elimination of
        MAXINT.  What a mess.  No warnings with gcc -pedantic.

	Fix UTF-8 bugs where cursor was not correct on scrolled screen.

Fri Apr  9 2004  Joe Allen <jhallen@world.std.com>
	* b.c, b.h, bw.c, types.h:

	Fix lockup bug with down arrow on last line (utf-8).

	Type change: chars will be banned.  Unsigned char * and
	int will be used for characters.

Fri Apr  9 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, b.c, b.h, bw.c, help.c, main.c, menu.c, rc.c,
	scrn.c, scrn.h, types.h, uedit.c, w.c, wcwidth.c:

	Initial check-in of UTF-8 support.  Use ^T U to enable UTF-8.
	JOE is likely to have many bugs at this point.

Thu Apr  8 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, b.c, joerc.in, rc.c, rc.h, tw.c, types.h:

	Fix screen update bug introduced with Apr 7th change.
