@@ -53,6 +53,12 @@
 # a color specification.
 
 
+# Define no. sync lines
+# You can say:
+# -200     means 200 lines
+# -        means always start parsing from beginning of file when we lose sync
+#          if nothing is specified, the default is -50
+
 # Define colors
 #
 # bold inverse blink dim underline
